# BitJug

./: .gitignore  README.md
adaptation/: fenics_topopt.py  fenics_topopt3d.py  fenics_topopt_lamp.py  filter.py  how_about_fenics.py  how_about_fenics_helm.py  topo_mma.py
adaptationx/: topx.py
basics/: 2014_Liu.md  2014_Liu.py  dodo.py  empty_nlopt.py  gather.py  optimize_me.py  thermodyn.py  warp.py
py_mma/: .gitignore  CMakeLists.txt  FindPETSc.cmake  caster_petsc.h  fenics_topopt.py  py_mma.cpp  test.py
